updated auth routes to take away params and updated swagger docs for them
